--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <h2 style="font-family:verdana;color:green;text-align:center;background-color:#75D701;">简介</h2>
 <p>本页面由杨宇宸提供技术支持</p>
 <hr />
+<h1 style="font-family:verdana;color:green;text-align:center;"班级共享文件</h1>
+<p style="font-family:arial;color:blue;font-size:20px;text-align:center;">Designed by Yuchen</p>
+<hr />
 <h2 style="font-family:verdana;color:green;text-align:center;background-color:#FC913A;">快捷搜索</h2>
 <iframe src="https://yuchenchuangsoft.github.io/c/" frameborder="0" width="900" scrolling="Yes" height="300" leftmargin="0" topmargin="0"></iframe>
 <hr />
@@ -18,10 +21,6 @@
 <p><a href="//www.google.com/">点击此处</a> Google（谷歌）</p>
 <p><a href="//www.bing.com/">点击此处</a> Bing（必应）</p>
 <p><a href="//zh.wikipedia.org/">点击此处</a> Wikipedia（维基百科）</p>
-<p><a href="//www.baidu.com/">点击此处</a> 百度</p>
-<p><a href="//zh.moegirl.org.cn/">点击此处</a> 萌娘百科</p>
-<p><a href="//www.github.com/">点击此处</a> GitHub</p>
-<p><a href="//www.zerochan.net/">点击此处</a> Zerochan</p>
 <p><a href="//www.youtube.com/">点击此处</a> YouTube</p>
 <p><a href="//www.bilibili.com/">点击此处</a> B站</p>
 <hr />
